# rust-indexer-for-plex

./: .gitignore  Cargo.toml  LICENSE  file_tree.json
file_tree/: Cargo.toml
file_tree/src/: lib.rs
file_tree/tests/: unity_test.rs
src/: main.rs
src/entities/: file_tree.rs  mod.rs  plex_course.rs
