[package]
name = "rust_indexer_for_plex"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.27", features = ["derive"] }
serde = { version = "1.0.148", features = ["derive"] }

# serde_json is just for the example, not required in general
serde_json = "1.0.89"