[package]
name = "rust_indexer_for_plex"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.8", features = ["derive"] }
serde = { version = "1.0.154", features = ["derive"] }
tokio = { version = "1.26.0", features = ["full"] }

file_tree = { path="file_tree" }

# serde_json is just for the example, not required in general
serde_json = "1.0.94"
cargo-watch = "8.4.0"
thiserror = "1.0.44"
anyhow = "1.0.72"
